# snshack-threads

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_dashboard.py
.github/workflows/: daily-autopilot.yml  today-test.yml  weekly-backup.yml
.streamlit/: config.toml  secrets.toml.example
data/default/: hook_theme_matrix.json  pending_posts.json  post_history.json  rate_limits.json  reference.csv  reference_posts.json  style_guide.md  threads-posts.csv
data/shared/: cta_effectiveness.json  element_analysis.json  hook_structures.json  hook_theme_matrix.json  universal_insights.json
docs/: privacy-policy.html  setup-guide.md
scripts/: auto-collect.sh  cron-runner.sh  daily_runner.py
src/snshack_threads/: __init__.py  ab_test.py  analytics.py  api.py  auto_research.py  autopilot.py  browser_scraper.py  cli.py  config.py  content_analyzer.py  content_generator.py  content_guard.py  content_recycler.py  csv_analyzer.py  csv_sync.py  dashboard.py  data_resolver.py  early_velocity.py  element_analyzer.py  filelock.py  follower_tracker.py  hook_theme_matrix.py  models.py  notifier.py  post_history.py  profile_audit.py  reference_posts.py  research.py  research_store.py  scheduler.py  shared_intelligence.py  templates.py  threads_api.py  timed_publisher.py  web_research.py
tests/: test_api.py  test_content_guard.py  test_csv_analyzer.py  test_data_resolver.py  test_funnel_features.py  test_models.py  test_post_history.py  test_research.py  test_robustness.py  test_scheduler.py  test_thread_and_recycle.py
