[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snshack-threads"
version = "0.1.0"
description = "Threads (Meta) automation & analytics tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "rich>=13.0,<14",
    "typer>=0.12,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "respx>=0.21,<1",
]

[project.scripts]
snshack = "snshack_threads.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
